--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,7 @@
     border: 2px solid #00ffcc;
     background-size: cover;
     background-position: center;
-    background-image: url('https://r2.erweima.ai/i/p7yAitWvSre7_YtqXm_7Xw.png');
+    background-image: url('https://photos.fife.usercontent.google.com/pw/AP1GczN_63XfGcDFxX_Ldw343HFKYM8k0kFaIxGqRpdzrgoujuhs0_2se9kI=w256-h256-s-no-gm?authuser=0');
     margin: 0 auto 15px auto;
 }
 
