--- a/estilo.css
+++ b/estilo.css
@@ -18,7 +18,7 @@
     border: 2px solid #00ffcc;
     background-size: cover;
     background-position: center;
-    background-image: url('https://photos.fife.usercontent.google.com/pw/AP1GczN_63XfGcDFxX_Ldw343HFKYM8k0kFaIxGqRpdzrgoujuhs0_2se9kI=w256-h256-s-no-gm?authuser=0');
+    background-image: url('https://github.com/Laucha4rpg/Ni-idea/blob/c5639131e8310184ea11e571cb9659234fb33f46/1f7ff0d1704ecba53e31243bafc9e749%20(1).png');
     margin: 0 auto 15px auto;
 }
 
